<resources>
    <string name="app_name">Users List MVVM</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_email">Email:</string>
    <string name="enter_name">Name:</string>
    <string name="enter_your_email">Enter User Email</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="enter_user_phone_number">Enter User Phone Number</string>
    <string name="phone_number">Number</string>
    <string name="list">List</string>
    <string name="favusers">Favourite Users</string>
    <string name="user_details">User Details</string>
    <string name="favourite">Favourite</string>
    <string name="add">Add</string>
    <string name="name">Name:</string>
    <string name="no_favourite_user">No Favourite User</string>
    <string name="email">Email:</string>
    <string name="phone_no">Phone No:</string>
    <string name="button">button</string>
</resources>