<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.adduser.AddUserFragment"
    android:orientation="vertical"
    android:background="#eee">

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:id="@+id/iv_toFavUser"
        android:src="@drawable/ic_baseline_arrow_circle_right_24"
        android:layout_gravity="end"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_details"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:textSize="30sp"
        android:padding="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="10dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/enter_name"
            android:layout_weight="0.3"
            android:textSize="18sp"
            android:padding="5dp"
            android:background="@drawable/tv_background"
            android:textColor="@color/black"
            />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:layout_marginHorizontal="10dp"
            android:padding="5dp"
            android:id="@+id/et_name"
            android:inputType="text"
            android:hint="@string/enter_user_name"
            android:maxLength="25"
            android:autofillHints="name"
            android:background="@drawable/et_background"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:layout_marginStart="10dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/enter_email"
            android:layout_weight="0.3"
            android:textSize="18sp"
            android:padding="5dp"
            android:background="@drawable/tv_background"
            android:textColor="@color/black"

            />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:layout_marginHorizontal="10dp"
            android:hint="@string/enter_your_email"
            android:id="@+id/et_email"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            android:maxLength="25"
            android:padding="5dp"
            android:background="@drawable/et_background"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:layout_marginStart="10dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:layout_weight="0.30"
            android:textSize="18sp"
            android:padding="5dp"
            android:background="@drawable/tv_background"
            android:textColor="@color/black"

            />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.70"
            android:layout_marginHorizontal="10dp"
            android:inputType="phone"
            android:maxLength="10"
            android:autofillHints="phone"
            android:hint="@string/enter_user_phone_number"
            android:id="@+id/et_phoneNo"
            android:padding="5dp"
            android:background="@drawable/et_background"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:layout_marginStart="10dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_checkBox"
            android:text="@string/favourite"
            android:textSize="18sp"
            android:layout_weight="0.30"
            android:padding="5dp"
            android:background="@drawable/tv_background"
            android:textColor="@color/black"
            />

        <CheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/checkbox"
            android:layout_weight="0.70"
            android:layout_marginStart="5dp"

            />

    </LinearLayout>

   <androidx.appcompat.widget.AppCompatButton
       android:id="@+id/btn_addUser"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="center_horizontal"
       android:layout_marginTop="20dp"
       android:text="@string/add"
       android:textColor="@color/white"
       android:background="@drawable/btn_background"

       />


</androidx.appcompat.widget.LinearLayoutCompat>